WebMediaPlayerMsCompositor: use correct ARGB/ABGR, use SkSurface/SkPixmap ISO SkBitmap

Tot has ARGB hardcoded, whereas certain platforms (e.g.
Android) usually have ABGR. Make that decision runtime.

Also, code in ToT uses SkBitmap, which is discouraged,
this CL changes it to using SkSurface and SkPixmap
instead.

BUG=628466

Review-Url: https://codereview.chromium.org/2153093003
Cr-Commit-Position: refs/heads/master@{#406086}

Former-commit-id: 8e2816a491e5f15d5fdfc809e7bad74f0cfcb9cb